force-app/main/default/objects/Tech_Fianza__c/Tech_Fianza__c.object-meta.xml
<CustomObject>
    <label>Fianza</label>
    <nameField>
        <displayFormat>Fi-{0000}</displayFormat>
        <label>Número de fianza</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fianzas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>