force-app/main/default/objects/Tech_Fianza__c/fields/Afianzadoras__c.field-meta.xml
<CustomField>
    <fullName>Afianzadoras__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Afianzadora</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fianzas</relationshipLabel>
    <relationshipName>Fianzas1</relationshipName>
    <type>Lookup</type>
</CustomField>