force-app/main/default/objects/Tech_Fianza__c/fields/Beneficiarios__c.field-meta.xml
<CustomField>
    <fullName>Beneficiarios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fianzas (Beneficiario)</relationshipLabel>
    <relationshipName>Fianzas2</relationshipName>
    <type>Lookup</type>
</CustomField>