force-app/main/default/objects/Tech_Fianza__c/fields/Contratistas__c.field-meta.xml
<CustomField>
    <fullName>Contratistas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratista</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fianzas (Contratista)</relationshipLabel>
    <relationshipName>Fianzas3</relationshipName>
    <type>Lookup</type>
</CustomField>