force-app/main/default/objects/Tech_Fianza__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Fianzas</relationshipLabel>
    <relationshipName>Fianzas_Tech</relationshipName>
    <type>Lookup</type>
</CustomField>