force-app/main/default/objects/Tech_Fianza__c/fields/Costo_de_fianza__c.field-meta.xml
<CustomField>
    <fullName>Costo_de_fianza__c</fullName>
    <label>Costo de fianza</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>