force-app/main/default/objects/Tech_Fianza__c/fields/DiasReclamaci_n__c.field-meta.xml
<CustomField>
    <fullName>DiasReclamaci_n__c</fullName>
    <label>Días para reclamación</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>