force-app/main/default/objects/Tech_Fianza__c/fields/Endoso__c.field-meta.xml
<CustomField>
    <fullName>Endoso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endoso</label>
    <referenceTo>Tech_Endoso__c</referenceTo>
    <relationshipLabel>Fianzas</relationshipLabel>
    <relationshipName>Fianzas</relationshipName>
    <type>Lookup</type>
</CustomField>