force-app/main/default/objects/Tech_Fianza__c/fields/Exposicion__c.field-meta.xml
<CustomField>
    <fullName>Exposicion__c</fullName>
    <label>Exposición %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>