force-app/main/default/objects/Tech_Fianza__c/fields/Fecha_de_Emision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Emision__c</fullName>
    <label>Fecha de emisión</label>
    <type>Date</type>
</CustomField>