force-app/main/default/objects/Tech_Fianza__c/fields/Fecha_de_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Vencimiento__c</fullName>
    <label>Fecha de vencimiento (original)</label>
    <type>Date</type>
</CustomField>