force-app/main/default/objects/Tech_Fianza__c/fields/Fecha_Vencimiento_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Vigente__c</fullName>
    <label>Fecha vencimiento vigente</label>
    <type>Date</type>
</CustomField>