force-app/main/default/objects/Tech_Fianza__c/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institución</label>
    <referenceTo>Institucion__c</referenceTo>
    <relationshipLabel>Fianzas</relationshipLabel>
    <relationshipName>Fianzas_Institucion</relationshipName>
    <type>Lookup</type>
</CustomField>