force-app/main/default/objects/Tech_Fianza__c/fields/Monto_Afianzado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Afianzado__c</fullName>
    <label>Monto afianzado (original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>