force-app/main/default/objects/Tech_Fianza__c/fields/Monto_Afianzado_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Monto_Afianzado_Vigente__c</fullName>
    <label>Monto afianzado vigente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>