force-app/main/default/objects/Tech_Fianza__c/fields/Prima_neta__c.field-meta.xml
<CustomField>
    <fullName>Prima_neta__c</fullName>
    <label>Prima neta (original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>