force-app/main/default/objects/Tech_Fianza__c/fields/Prima_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Prima_Vigente__c</fullName>
    <label>Prima vigente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>