force-app/main/default/objects/Tech_Fianza__c/fields/Tipo_de_Riesgo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Riesgo__c</fullName>
    <label>Tipo de riesgo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cumplimiento</fullName>
            </value>
            <value>
                <fullName>Anticipo</fullName>
            </value>
            <value>
                <fullName>Vicios y Defectos Ocultos</fullName>
            </value>
            <value>
                <fullName>Pasivos Laborales</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>